--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,34 +10,11 @@
   </head>
 
   <body>
-    <% unless flash.empty? %>
-   <script type="text/javascript">
-      <% flash.each do |f| %>
-    <% type = f[0].to_s.gsub('alert', 'error').gsub('notice', 'info') %>
-     toastr['<%= type %>']('<%= f[1] %>');
-   <% end %>
-   </script>
-<% end %>
-
-<% if current_user.nil? %>
-  <%= link_to new_user_session_path, class: 'login-button' do %>Sign in<% end %>
-<% else %>
-  <!-- <%= link_to home_index_path, class: 'login-button' do %>Go to App<% end %> -->
-  <%= link_to destroy_user_session_path, method: :delete do %>Log out<% end %>
-<% end %>
-
-<% if user_signed_in? %>
-
-  <%= link_to('Edit registration', edit_user_registration_path) %>
-  <!-- <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>         -->
-
-<% else %>
-
-  <%= link_to('Register', new_user_registration_path)  %>
-  <!-- <%= link_to('Login', new_user_session_path)  %>   -->
-
-<% end %>
-
+    <div class="container">
+      <%= render 'shared/nav' %>
+      <%= render 'shared/alerts' %>
     <%= yield %>
+
+  </div>
   </body>
 </html>
